--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nestjs/sequelize": "^10.0.1",
     "@nrwl/nest": "^18.0.4",
     "@nrwl/next": "^18.0.4",
+    "@tanstack/react-query": "^5.61.5",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
