--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@nestjs/sequelize": "^10.0.1",
     "@nrwl/nest": "^18.0.4",
     "@nrwl/next": "^18.0.4",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@tanstack/react-query": "^5.61.5",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.468.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.13",
@@ -39,6 +43,8 @@
     "rxjs": "^7.8.0",
     "sequelize": "^6.37.1",
     "sequelize-typescript": "^2.1.6",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.3.0",
     "yup": "^1.3.3"
   },
