--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nrwl/nest": "^18.0.4",
     "@nrwl/next": "^18.0.4",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.2",
     "@tanstack/react-query": "^5.61.5",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
