--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "flowbite-react": "^0.10.2",
     "lucide-react": "^0.468.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
